feat: install and setup primeNG

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
     "date-fns": "^2.30.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
