feat: handle title strategy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "dom"
     ],
     "paths": {
-      "@globalStore/*": ["./src/app/store/*"]
+      "@core/*": ["./src/app/core/*"]
     }
   },
   "angularCompilerOptions": {
