--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ngrx/router-store": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "date-fns": "^2.30.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
