feat: mhandle envs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "dom"
     ],
     "paths": {
+      "@envs/*": ["./src/environments/*"],
       "@core/*": ["./src/app/core/*"]
     }
   },
