--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,15 @@
       "dom"
     ],
     "paths": {
-      "@core/*": ["./src/app/core/*"],
-      "@views/*": ["./src/app/views/*"]
+      "@core/*": [
+        "./src/app/core/*"
+      ],
+      "@views/*": [
+        "./src/app/views/*"
+      ],
+      "@providers": [
+        "./src/app/app.providers.ts"
+      ]
     }
   },
   "angularCompilerOptions": {
