feat: changes in title service
- handle translate title
- add APP_NAME const

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       ],
       "@providers": [
         "./src/app/app.providers.ts"
+      ],
+      "@shared/*": [
+        "./src/app/shared/*"
       ]
     }
   },
