--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@ngrx/store-devtools": "^16.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@types/gsap": "^3.0.0",
     "date-fns": "^2.30.0",
+    "gsap": "^3.12.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
     "rxjs": "~7.8.0",
