--- a/package.json
+++ b/package.json
@@ -52,17 +52,20 @@
     "@angular/compiler-cli": "^16.2.0",
     "@ngrx/eslint-plugin": "^16.2.0",
     "@testing-library/angular": "^14.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-preset-angular": "^13.1.1",
-    "prettier": "^3.0.1",
+    "prettier": "^3.0.2",
     "prettier-eslint": "^15.0.1",
+    "prettier-plugin-organize-attributes": "^1.0.0",
     "typescript": "~5.1.3"
   },
   "jest": {
