--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,26 +20,13 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "esModuleInterop": true,
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
+    "lib": ["ES2022", "dom"],
     "paths": {
-      "@envs/*": [
-        "src/environments/*"
-      ],
-      "@core/*": [
-        "src/app/core/*"
-      ],
-      "@views/*": [
-        "src/app/views/*"
-      ],
-      "@providers": [
-        "src/app/app.providers.ts"
-      ],
-      "@shared/*": [
-        "src/app/shared/*"
-      ]
+      "@envs/*": ["src/environments/*"],
+      "@core/*": ["src/app/core/*"],
+      "@views/*": ["src/app/views/*"],
+      "@providers": ["src/app/app.providers.ts"],
+      "@shared/*": ["src/app/shared/*"]
     }
   },
   "angularCompilerOptions": {
