--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs": "~7.8.0",
     "ts-jest": "^29.1.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@testing-library/angular": "^14.2.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/jest": "^29.5.3",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.44.0",
