--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,9 +2,9 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: ['master']
+    branches: [ 'master' ]
   pull_request:
-    branches: ['master']
+    branches: [ 'master' ]
 
 jobs:
   build:
@@ -20,5 +20,5 @@ jobs:
 
       - name: Build
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build
