--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/gsap": "^3.0.0",
     "date-fns": "^2.30.0",
     "gsap": "^3.12.2",
+    "jwt-decode": "^3.1.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
     "rxjs": "~7.8.0",
